Fix bug: Text cut off in Mobil (iOS) vertical view

--- a/app/assets/stylesheets/frontpage/mobile.css.scss
+++ b/app/assets/stylesheets/frontpage/mobile.css.scss
@@ -3,4 +3,7 @@
   	max-width: 200px;
     font-size: 8px;
   }
+  .btn-lg{
+  	padding: 15px 5px 15px;
+  }
 }
